--- a/iboard/static/src/css/board.css
+++ b/iboard/static/src/css/board.css
@@ -1,5 +1,50 @@
 .grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 100px 100px;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    display: inline-block;
+}
+
+div.indicator-card {
+    min-width: 300px;
+    margin: 10px 10px 10px 10px;
+    display: inline-grid;
+    border: 1px solid black;
+    background-color: white;
+    box-shadow: 4px -4px 6px 0px #BDBDBD;
+}
+
+.indicator-body {
+    padding: 10px 20px 0 10px;
+    display: flex;
+    font-family: 'Open Sans', sans-serif;
+    position: absolute;
+}
+
+.indicator-card-number {
+    font-size: 65px;
+    margin: 0;
+    font-weight: bolder;
+}
+
+.indicator-card-title {
+    margin-bottom: -10px;
+}
+
+.indicator-card > svg {
+    margin: 30px 0 auto 0;
+}
+
+/*.indicator-card-theme-color1{*/
+/*  background: url("/iboard/static/src/imgs/bg-1.svg") bottom right no-repeat;*/
+/*}*/
+/*.indicator-card-theme-color2{*/
+/*  background: url("/iboard/static/src/imgs/bg-2.svg") bottom right no-repeat;*/
+/*}*/
+@media (max-width: 480px) {
+    /* Estilos para dispositivos móviles */
+    div.indicator-card {
+        width: 95%;
+        margin: 5px 10px 10px 10px;
+    }
 }
