--- a/iboard/static/src/css/board.css
+++ b/iboard/static/src/css/board.css
@@ -1,3 +1,7 @@
+.iboard-dashboard-title {
+    text-align: start;
+}
+
 .grid {
     width: 100%;
     height: 100%;
@@ -9,7 +13,7 @@ div.indicator-card {
     min-width: 300px;
     margin: 10px 10px 10px 10px;
     display: inline-grid;
-    border: 1px solid black;
+
     background-color: white;
     box-shadow: 4px -4px 6px 0px #BDBDBD;
 }
