--- a/iboard/static/src/css/board.css
+++ b/iboard/static/src/css/board.css
@@ -2,53 +2,66 @@
     text-align: start;
 }
 
-.grid {
-    width: 100%;
-    height: 100%;
-    background-color: white;
-    display: inline-block;
+div.iboard-body {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: right;
 }
 
-div.indicator-card {
-    min-width: 300px;
-    margin: 10px 10px 10px 10px;
-    display: inline-grid;
-
-    background-color: white;
-    box-shadow: 4px -4px 6px 0px #BDBDBD;
+.indicator-card {
+    border-left-width: 3px !important;
 }
+
+div.iboard_kanban {
+    display: inline-flex !important;
+    padding: 0 !important;
+}
+
 
 .indicator-body {
-    padding: 10px 20px 0 10px;
-    display: flex;
     font-family: 'Open Sans', sans-serif;
-    position: absolute;
 }
 
+
 .indicator-card-number {
-    font-size: 65px;
+    font-size: 60px;
     margin: 0;
     font-weight: bolder;
 }
 
 .indicator-card-title {
-    margin-bottom: -10px;
+    text-transform: uppercase;
+    font-family: 'Open Sans', sans-serif;
 }
 
-.indicator-card > svg {
-    margin: 30px 0 auto 0;
+
+.legend {
+    display: flex;
+    flex-wrap: wrap;
 }
 
-/*.indicator-card-theme-color1{*/
-/*  background: url("/iboard/static/src/imgs/bg-1.svg") bottom right no-repeat;*/
-/*}*/
-/*.indicator-card-theme-color2{*/
-/*  background: url("/iboard/static/src/imgs/bg-2.svg") bottom right no-repeat;*/
-/*}*/
-@media (max-width: 480px) {
-    /* Estilos para dispositivos móviles */
-    div.indicator-card {
-        width: 95%;
-        margin: 5px 10px 10px 10px;
-    }
+.legend-item {
+    display: flex;
+    align-items: center;
+    margin-left: 5px;
+}
+
+.legend-color {
+    width: 10px;
+    height: 10px;
+    margin-right: 2px;
+    border-radius: 50%;
+}
+
+.legend-category {
+
+}
+
+.legend-value {
+    margin-left: 5px;
+}
+
+.chart-legend {
+    display: flex;
 }
