[REF] Cambios el draw del tamaño de las gráficas de pie (dona) [REF] Cambios en el css y los eventos de gridstack

--- a/iboard/static/src/css/board.css
+++ b/iboard/static/src/css/board.css
@@ -5,11 +5,10 @@
 div.iboard-body {
     box-sizing: border-box;
     width: 100%;
-    height: auto;
-    min-height: 150%;
+    height: 100vh; /*By Gera*/
     display: flex;
     flex-flow: column wrap;
-    overflow-y: auto;
+    overflow-y: scroll;
 }
 .indicator-card {
     border-left-width: 3px !important;
