--- a/iboard/static/src/css/board.css
+++ b/iboard/static/src/css/board.css
@@ -83,7 +83,7 @@ div.iboard_base{
 
 .legend-category {
     font-size: 12px;
-    font-family: 'Roboto Light';
+    font-family: "Nunito Sans", "Helvetica Neue", sans-serif
 }
 
 .iboard_header {
