--- a/iboard/views/colors.xml
+++ b/iboard/views/colors.xml
@@ -18,6 +18,7 @@
                                 <group>
                                     <field name="color_ids">
                                         <tree>
+                                            <field name="order" widget="handle"/>
                                             <field name="color"/>
                                         </tree>
                                     </field>
