--- a/iboard/views/board.xml
+++ b/iboard/views/board.xml
@@ -22,7 +22,13 @@
                         </div>
                         <group>
                             <group>
-
+                                <field name="menu_name"/>
+                                <field name="menu_parent_id"/>
+                                <field name="menu_id"/>
+                            </group>
+                            <group>
+                                <field name="groups_ids" widget="many2many_tags"/>
+                                <field name="action_id"/>
                             </group>
                         </group>
                         <notebook>
